# my-business

./: .gitignore  Dockerfile  docker-compose-prod.yaml  docker-compose.yaml  pyproject.toml
business/: Buys.md  Notes.md  db.sqlite3  manage.py
business/business/: asgi.py  settings.py  urls.py  wsgi.py
business/business/settings/: prod.py
business/common/: exceptions.py  managers.py  mixins.py
business/core/: admin.py  constants.py  forms.py  models.py  serializers.py  urls.py  views.py
business/core/migrations/: 0001_initial.py  0002_selloperationaccount_product_stock_delete_stock.py  0003_alter_buyoperation_source_accounts_and_more.py  0004_product_external_code.py  0005_alter_product_options_alter_service_options_and_more.py  0006_product_box_size_alter_account_kind.py  0007_remove_transferoperation_transfer_date_and_more.py  0008_transferoperation_amount.py  0009_account_internal.py  0010_extractoperation_amount.py  0011_alter_service_options_remove_service_cost_and_more.py  0012_rename_internal_account_is_business.py  0013_extractoperation_cost_extractoperation_observations_and_more.py  0014_expenseoperation_itemincome_buyoperation_amount_and_more.py  0015_selloperation_amount_selloperation_cost_and_more.py
business/core/models/: __init__.py  base.py  core.py  operation.py  validation.py
business/core/static/js/: admin.js  buy_operation_admin.js  extract_operation_admin.js  sell_operation_admin.js  sell_operation_admin.js.OLD
