[tool.poetry]
name = "my-business"
version = "0.1.0"
description = ""
authors = ["Hugo Chavero <hugochavero@gmail.com>"]
readme = "README.md"
# packages = [{include = "my_business"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.5"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
